fixing tests and removing console logs ✨

--- a/snake/run_tests.html
+++ b/snake/run_tests.html
@@ -5,7 +5,5 @@
 </body>
 <footer>
     <script src="script.js" type="text/javascript"></script>
-    <script>
-        new Game();
-    </script>
+    <script src="test_script.js" type="text/javascript"></script>
 </footer>
