--- a/snake/index.html
+++ b/snake/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <head>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 </body>
 <footer>
+
     <script src="script.js" type="text/javascript"></script>
     <script>
         new Game();
